[gd_scene load_steps=3 format=3 uid="uid://domm0phqpqq50"]

[ext_resource type="Script" path="res://Attacks/Light2/light2.gd" id="1_kcdrm"]
[ext_resource type="SpriteFrames" uid="uid://caqtdm52yjagb" path="res://Attacks/Light2/TileBeamSpriteFrames.tres" id="2_2s11q"]

[node name="Light2" type="Node2D"]
texture_filter = 1
script = ExtResource("1_kcdrm")

[node name="sprite1" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("2_2s11q")
offset = Vector2(0, -4)

[node name="sprite2" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("2_2s11q")
frame = 5
frame_progress = 1.0
offset = Vector2(0, -4)

[node name="sprite3" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("2_2s11q")
frame = 5
frame_progress = 1.0
offset = Vector2(0, -4)

[node name="sprite4" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("2_2s11q")
frame = 5
frame_progress = 1.0
offset = Vector2(0, -4)

[node name="sprite5" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("2_2s11q")
frame = 5
frame_progress = 1.0
offset = Vector2(0, -4)
